--- a/unit6/style.css
+++ b/unit6/style.css
@@ -3,11 +3,11 @@
   height: 300px;
 }
 main{
-  background-color: yellowgreen;
-  color: white;
+  background-color: lightblue;
+  color: darkblue;
 }
 body{
-  background-image: url("techphoto2.jpg");
+  background-image: url("techno2.jpeg");
   background-size: cover;
 }
 #wrapper{width: 60%;
@@ -15,10 +15,10 @@ body{
         margin-top: 30px
         }
 ul{
-  list-style-image: url("banana.png");
+  list-style-image: url("bitgear.png");
 }
 .specialborder{
  border: 10px solid transparent;
-  padding: 15px;
-  border-image: url(border.png) 30 round;
+  padding: 20px;
+  border-image: url("purpleborder.jpeg") 30 round;
 }
