--- a/unit5/style.css
+++ b/unit5/style.css
@@ -36,8 +36,9 @@ ul ol {
 }
 nav ul {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
+  border-radius: 25px;
+  margin: 30;
+  padding: 30;
   overflow: hidden;
   background-color: #333;
 }
