made changes to images on unit 6 project

--- a/unit6/style.css
+++ b/unit6/style.css
@@ -21,7 +21,7 @@ ul{
   list-style-position: inside;
 }
 .specialborder{
- border: 10px solid transparent;
+  border: 25px solid transparent;
   padding: 20px;
-  border-image: url("purpleborder.jpeg") 30 round;
+  border-image: url("purpleborder.jpeg") 30% round;
 }
